test(#70): fix controller tests and update API specifications